--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Yeeiisi</title>
+    <title>Mi Portafolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css" />
 </head>
 <!---->
 <body>
@@ -44,7 +43,7 @@
         <div class="container">
             <h2>Proyectos</h2>
             <div class="project-grid">
-                <div class="project-card">
+                <div class="project-card" >
                     <h3>Bloc de notas encriptado</h3>
                     <p>Un bloc de notas en Python que encripta las notas al guardarlas utilizando una contraseña proporcionada por el usuario.</p>
                     <div class="button-container">
@@ -53,25 +52,27 @@
                 </div>
                 <div class="project-card">
                     <h3>Calculadora Web</h3>
-                    <p>Calculadora web simple que permite realizar operaciones matemáticas básicas.</p>
+                    <p>Aplicación web simple para realizar operaciones matemáticas básicas de forma intuitiva.</p>
                     <div class="button-container">
                         <a href="https://github.com/yeeiisi/HTLM-Calculator.git" class="project-button">Ver en GitHub</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <h3>Juego de la Serpiente</h3>
-                    <p>El clásico juego de la serpiente hecho en python.</p>
+                    <p>Versión clásica del juego de la serpiente, desarrollado en Python para una experiencia divertida.</p>
                     <div class="button-container">
                         <a href="https://github.com/yeeiisi/Snake.git" class="project-button">Ver en GitHub</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <h3>Próximo Proyecto</h3>
-                    <p>Estoy trabajando en algunas herramientas...</p>
+                    <div class="icon-container">
+                        <i class="fas fa-user-secret fa-3x"></i>
+                    </div>
                     <div class="button-container">
-                    <a href="https://github.com/yeeiisi" class="project-button">Coming Soon...</a>
+                        <a href="https://github.com/yeeiisi" class="project-button">Coming Soon...</a>
                     </div>   
-                </div>             
+                </div>                                        
             </div>
         </div>
     </section>
@@ -116,7 +117,19 @@
                     <i class="fab fa-github" style="font-size: 3rem; color: #BB86FC;"></i>
                     <p>GitHub</p>
                 </div>
-                
+                <div class="skill">
+                    <i class="fas fa-database skill-icon"></i>
+                    <p>SQL Developer</p>
+                </div>
+                <div class="skill">
+                    <i class="fas fa-terminal"></i> <!-- Ícono de terminal -->
+                    <p>Linux shell</p>
+                </div>
+                <div class="skill">
+                    <i class="fas fa-gem"></i>
+                    <p>Ruby</p>
+                </div>
+
                 <!-- Agrega más habilidades aquí -->
             </div>
         </div>
@@ -162,6 +175,9 @@
     </footer>
 
     <script src="script.js"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
