--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="project-grid">
                 <div class="project-card" >
                     <h3>Bloc de notas encriptado</h3>
-                    <p>Un bloc de notas en Python que encripta las notas al guardarlas utilizando una contraseña proporcionada por el usuario.</p>
+                    <p>Un bloc de notas en Python que encripta las notas al guardarlas utilizando una contraseña.</p>
                     <div class="button-container">
                         <a href="https://github.com/yeeiisi/Bloc-de-notas-encriptado.git" class="project-button">Ver en GitHub</a>
                     </div>
