--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="project-grid">
                 <div class="project-card" >
                     <h3>Bloc de notas encriptado</h3>
-                    <p>Un bloc de notas en Python que encripta las notas al guardarlas utilizando una contraseña.</p>
+                    <p>Un bloc de notas en Python que encripta las notas al guardarlas utilizando una contraseña proporcionada por el usuario.</p>
                     <div class="button-container">
                         <a href="https://github.com/yeeiisi/Bloc-de-notas-encriptado.git" class="project-button">Ver en GitHub</a>
                     </div>
@@ -155,6 +155,16 @@
                         <a href="https://www.credly.com/badges/2cdd0c3b-1cec-4434-a817-ff332a7976cf/public_url" target="_blank" class="certification-button">Ver Certificado</a>
                     </div>
                 </div>
+                <div class="certification-card"></div>
+                    <img src="images/cisco-certified-support-technician-cybersecurity-cc.png" alt="Networking Basics" loading="lazy" class="certification-badge">
+                    <h3>Networking Basics</h3>
+                    <p>Issued by Cisco</p>
+                    <div class="button-container">
+                        <a href="https://www.credly.com/badges/66cfc4ac-b681-4a4e-ae62-f114ad95d920/public_url" target="_blank" class="certification-button">Ver Certificado</a>
+                    </div>
+                </div>
+
+
                 <!-- Agrega más certificaciones aquí -->
             </div>
         </div>
