--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </div>
                 <div class="certification-card"></div>
                     <img src="images/cisco-certified-support-technician-cybersecurity-cc.png" alt="Networking Basics" loading="lazy" class="certification-badge">
-                    <h3>Networking Basics</h3>
+                    <h3>CCST</h3>
                     <p>Issued by Cisco</p>
                     <div class="button-container">
                         <a href="https://www.credly.com/badges/66cfc4ac-b681-4a4e-ae62-f114ad95d920/public_url" target="_blank" class="certification-button">Ver Certificado</a>
