--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <i class="fas fa-user-secret fa-3x"></i>
                     </div>
                     <div class="button-container">
-                        <a href="https://github.com/yeeiisi" class="project-button">Coming Soon...</a>
+                        <a href="https://github.com/yeeiisi/Herramientas-hacking-tico" class="project-button">Coming Soon...</a>
                     </div>   
                 </div>                                        
             </div>
