--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <p>Bash</p>
                 </div>
                 <div class="skill">
-                    <i class="fas fa-code"></i>
+                    <i class="fab fa-cuttlefish" style="font-size: 3rem; color: #BB86FC;"></i>
                     <p>C++</p>
                 </div>
                 <div class="skill">
