--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </section>
     
     
-    <section class="contact">
+    <section id="contact" class="contact">
         <div class="container">
             <h2>Contacto</h2>
             <p>Si deseas ponerte en contacto conmigo, puedes enviarme un correo a: <a href="mailto:ibarrondomaciajosecarlos[at]gmail.com">ibarrondomaciajosecarlos[at]gmail.com</a></p>
