--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Proyectos</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Sobre Mí</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#seccion1">Proyectos</a></li>
+                <li><a href="https://yeeiisi.github.io/yeeiisi/">Blog</a></li>
+                <li><a href="#seccion2">Sobre Mí</a></li>
+                <li><a href="#contact">Contacto</a></li>
             </ul>
             
         </nav>
@@ -40,7 +40,7 @@
         </div>
     </section>
 
-    <section class="projects">
+    <section class="projects" id="seccion1">
         <div class="container">
             <h2>Proyectos</h2>
             <div class="project-grid">
@@ -78,7 +78,7 @@
         </div>
     </section>
 
-    <section class="skills">
+    <section class="skills" id="seccion2">
         <div class="container">
             <h2>Habilidades</h2>
             <div class="skills-grid">
@@ -226,4 +226,5 @@
     </script>
 </body>
 </html>
+
 
