--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#seccion1">Proyectos</a></li>
-                <li><a href="https://yeeiisi.github.io/yeeiisi/">Blog</a></li>
-                <li><a href="#seccion2">Sobre Mí</a></li>
-                <li><a href="#contact">Contacto</a></li>
+                <li><a href="#">Proyectos</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Sobre Mí</a></li>
+                <li><a href="#">Contacto</a></li>
             </ul>
             
         </nav>
@@ -40,7 +40,7 @@
         </div>
     </section>
 
-    <section class="projects" id="seccion1">
+    <section class="projects">
         <div class="container">
             <h2>Proyectos</h2>
             <div class="project-grid">
@@ -66,6 +66,20 @@
                     </div>
                 </div>
                 <div class="project-card">
+                    <h3>Blog en terminal</h3>
+                    <p>Blog portafolio en terminal simulada para entorno web.</p>
+                    <div class="button-container">
+                        <a href="https://yeeiisi.github.io/D33P_Y3ISI/" class="project-button">Ver en GitHub</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <h3>Blog de writeups de hacking ético</h3>
+                    <p>Blog recopilatorio de writeups de retos de hacking ético.</p>
+                    <div class="button-container">
+                        <a href="https://yeeiisi.github.io/Blog-de-Writeups/index.html" class="project-button">Ver en GitHub</a>
+                    </div>
+                </div>
+                <div class="project-card">
                     <h3>Próximo Proyecto</h3>
                     <div class="icon-container">
                         <i class="fas fa-user-secret fa-3x"></i>
@@ -78,7 +92,7 @@
         </div>
     </section>
 
-    <section class="skills" id="seccion2">
+    <section class="skills">
         <div class="container">
             <h2>Habilidades</h2>
             <div class="skills-grid">
@@ -226,5 +240,3 @@
     </script>
 </body>
 </html>
-
-
